--- a/src/styles/mirror.css
+++ b/src/styles/mirror.css
@@ -16,7 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #222;
+  background-color: #fff;
   border-radius: 4rem;
 }
 
