--- a/src/styles/weather-screen.css
+++ b/src/styles/weather-screen.css
@@ -4,10 +4,46 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   row-gap: 4rem;
 }
 
 .weather-screen-container h1{
   font-size: 3rem;
+}
+
+.weather-screen-container h2{
+  font-size: 2rem;
+}
+
+.pronostico-meteorologico{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 2rem 3rem;
+}
+
+.left-data{
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.right-data{
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.pronostico-meteorologico p{
+  font-size: 1.5rem;
 }
