--- a/src/styles/chart-screen.css
+++ b/src/styles/chart-screen.css
@@ -11,3 +11,12 @@
 .chart-screen-container h1{
   font-size: 3rem;
 }
+
+.grafico-progreso{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
