--- a/src/styles/settings-screen.css
+++ b/src/styles/settings-screen.css
@@ -29,3 +29,19 @@
   padding: .5rem;
   border-radius: 1rem;
 }
+
+.settings-screen-container button{
+  border: none;
+  border-radius: 1rem;
+  background-color: #ccc;
+}
+
+.settings-screen-container button.correct{
+  background-color: rgba(0, 255, 0, 0.358);
+  border: .35rem solid green;
+}
+
+.settings-screen-container button.incorrect{
+  background-color: rgba(255, 0, 0, 0.358);
+  border: .35rem solid red;
+}
